Adding new placeholder text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h4>My favorite color is Grey</h4>
         <h4>My favorite food is Beans</h4>
         <h4>If i could be any animal, I would be a Cat.</h4>
+        <p>Cats are the best!, Meow! Meow! Meow!</p>
     </div>
 </body>
 </html>
