added personal information to index.html

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
         <h4>If i could be any animal, I would be a Cat.</h4>
         <p>Cats are the best!, Meow! Meow! Meow!</p>
     </div>
+    <div class="my-style">
+        <h3>Rasaki Solebo: Loves <em>Bulls</em>in Chicago, IL</h3>
+    </div>
 </body>
 </html>
