added an <h4> tag in aros-repo-two branch

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <div class="my-style">
         <h3>Rasaki Solebo: Loves <em>Bulls</em>in Chicago, IL</h3>
+        <h4>This happend in aros-repo-two</h4>
     </div>
 </body>
 </html>
