--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div align="center">
         <h1>Rasaki Solebo</h1>
-        <h2>Software Developer</h2>
+        <h2>Software / Web Developer</h2>
         <hr>
         <h3>About Me:</h3>
         <h4>My home town is Lagos (Nigeria)</h4>
